Fix overflow bug in "show Hanzi" feature

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
 
 .result-line {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5em;
 }
 
